[package]
name = "propane_monitor_embassy"
version = "0.1.0"
edition = "2021"

[features]
default = ["nightly"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-nrf/unstable-traits", "embedded-io/async"]

[dependencies]
embassy-futures = { version = "0.1.0"}
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf9160-ns", "time-driver-rtc1", "gpiote", "unstable-pac"] }
#embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"], optional = true }
#embassy-usb = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-serial = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-hid = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-ncm = { version = "0.1.0", features = ["defmt"], optional = true }
embedded-io = "0.3.0"

defmt = "0.3"
defmt-rtt = "0.3"

static_cell = "1.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
embedded-storage = "0.3.0"
#usbd-hid = "0.5.2"
serde = { version = "1.0.136", default-features = false }

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
#embassy-net = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-serial = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-hid = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-ncm = { git = "https://github.com/embassy-rs/embassy" }
