[package]
name = "propane_monitor_embassy"
version = "0.1.0"
edition = "2021"

[features]
default = ["nightly"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-nrf/unstable-traits", "embedded-io/async"]

[dependencies]
coap-lite = { version = "0.11.2", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
alloc-cortex-m = "0.4.2"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-futures = { version = "0.1.0"}
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.1.0", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf9160-ns", "time-driver-rtc1", "gpiote", "unstable-pac"] }
#embassy-net = { version = "0.1.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"], optional = true }
#embassy-usb = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-serial = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-hid = { version = "0.1.0", features = ["defmt"], optional = true }
#embassy-usb-ncm = { version = "0.1.0", features = ["defmt"], optional = true }
embedded-io = "0.3.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.16", features = ["serde"] }
nrf-modem = { git = "https://github.com/diondokter/nrf-modem.git", features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
static_cell = "1.0"
tinyrlibc = { git = "https://github.com/diondokter/tinyrlibc.git", branch = "ncs-2.0.1" }


[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
#embassy-net = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-serial = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-hid = { git = "https://github.com/embassy-rs/embassy" }
#embassy-usb-ncm = { git = "https://github.com/embassy-rs/embassy" }
